--- a/sass/layouts/news/_news.scss
+++ b/sass/layouts/news/_news.scss
@@ -1,7 +1,7 @@
 .news { 
 
   position: relative;
-  // overflow-x: hidden!important;
+  overflow-x: hidden!important;
   background-color: teal;
 
     &__name {
